# Ego

./: meson.build  meson.options
inc/: ego-version.h  ego.h
inc/config/: ego-version.h.in
res/project/: ego-footer.h  ego-header.h
res/scripts/: to_lowercase.py  to_uppercase.py
src/: ego-version.c
test/: version.c
